--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "yajra/laravel-datatables": "^1.0",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
@@ -16,6 +17,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
+        "orangehill/iseed": "^2.5",
         "phpunit/phpunit": "^7.0",
         "xethron/migrations-generator": "^2.0"
     },
